feat: Implement initial login dialog with navigation and user options

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -1,81 +1,36 @@
 <div class="login-dialog">
   <div class="dialog-header">
+    <button mat-icon-button class="back-button" (click)="backToInitialDialog()" aria-label="Back to start">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
     <img src="icons/icon-128x128.png" alt="Nostria Logo" class="app-icon">
-    <h2 mat-dialog-title>Welcome to Nostria</h2>
+    <h2 mat-dialog-title>Sign in to Nostria</h2>
   </div>
 
-  @if (currentView() === 'main') {
-  <div mat-dialog-content>
-    <p class="dialog-subtitle">Choose how you would like to use Nostria:</p>
-
-    @if (extensionError()) {
-    <div class="extension-error">
-      <p>{{ extensionError() }}</p>
-      <p>Make sure you have a Nostr extension installed like Alby or nos2x</p>
-    </div>
-    }
-
+  <div class="dialog-tabs">
     @if (nostrService.hasAccounts()) {
-    <mat-card class="login-card use-existing" (click)="switchToExistingAccounts()">
-      <mat-card-header>
-        <mat-card-title>Existing Account</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p>Select from your previously used accounts</p>
-      </mat-card-content>
-    </mat-card>
+    <button mat-button class="tab-button" [class.active]="currentView() === 'existing-accounts'" (click)="currentView.set('existing-accounts')">
+      Previous Accounts
+    </button>
     }
+    <button mat-button class="tab-button" [class.active]="currentView() === 'nsec'" (click)="currentView.set('nsec')">
+      Private Key
+    </button>
+    <button mat-button class="tab-button" [class.active]="currentView() === 'extension-loading' || extensionError()" (click)="loginWithExtension()">
+      Extension
+    </button>
+    <button mat-button class="tab-button" [class.active]="currentView() === 'nostr-connect'" (click)="currentView.set('nostr-connect')">
+      Nostr Connect
+    </button>
+    <button mat-button class="tab-button" (click)="usePreviewAccount()">
+      Preview Mode
+    </button>
+  </div>
 
-    <div class="login-options">
-      <mat-card class="login-card" (click)="generateNewKey()">
-        <mat-card-header>
-          <mat-card-title>New account</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Generate a new Nostr private key</p>
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card class="login-card" (click)="loginWithExtension()">
-        <mat-card-header>
-          <mat-card-title>Extension</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Use a browser extension like Alby or nos2x</p>
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card class="login-card" (click)="currentView.set('nostr-connect')">
-        <mat-card-header>
-          <mat-card-title>Nostr Connect</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Use remote signing with Nostria Signer app</p>
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card class="login-card" (click)="currentView.set('nsec')">
-        <mat-card-header>
-          <mat-card-title>nsec</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Enter your Nostr private key</p>
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card class="login-card" (click)="usePreviewAccount()">
-        <mat-card-header>
-          <mat-card-title>Preview</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>Try Nostria with a demo account</p>
-        </mat-card-content>
-      </mat-card>
-    </div>
-
-    <div class="terms-of-use-notice">
-      <p>By using Nostria, you agree to our <a href="#" (click)="$event.preventDefault(); openTermsOfUse()">Terms of Use</a>.</p>
-    </div>
+  @if (extensionError()) {
+  <div class="extension-error">
+    <p>{{ extensionError() }}</p>
+    <p>Make sure you have a Nostr extension installed like Alby or nos2x</p>
   </div>
   }
 
