--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,10 @@ nav {
   flex: 1 1 auto;
 }
 
+.close-button {
+  position: absolute;
+}
+
 .app-title {
   margin-left: 4px;
   margin-right: 1em;
