feat: Implement account management features with account switching and removal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -210,10 +210,10 @@
             <mat-icon matListItemIcon>manage_accounts</mat-icon>
             <span>Manage accounts</span>
           </a>
-          <a mat-list-item (click)="logout(); toggleProfileSidenav()">
+          <!-- <a mat-list-item (click)="logout(); toggleProfileSidenav()">
             <mat-icon matListItemIcon>logout</mat-icon>
             <span>Sign out</span>
-          </a>
+          </a> -->
         </mat-nav-list>
         <mat-divider></mat-divider>
         <!-- Account selection menu -->
