--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,1 +1,91 @@
-<p>accounts works!</p>
+<div class="accounts-container">
+  <h1 class="title">Manage Accounts</h1>
+  
+  <div class="current-account">
+    <h2>Current Account</h2>
+    <mat-card class="account-card">
+      @if (currentAccount() && nostrService.getMetadataForAccount(currentAccount()!.pubkey)?.content; as metadata) {
+        <div class="account-content">
+          <div class="account-avatar">
+            @if (metadata.picture) {
+              <img [src]="metadata.picture" alt="Profile picture" class="avatar-image">
+            } @else {
+              <mat-icon class="avatar-placeholder">account_circle</mat-icon>
+            }
+          </div>
+          <div class="account-details">
+            <h3>{{ metadata.display_name || metadata.name || (currentAccount()?.pubkey | npub) }}</h3>
+            <p class="pubkey">{{ currentAccount()?.pubkey | npub }}</p>
+            <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed | date:'medium' }}</p>
+          </div>
+        </div>
+      } @else if (currentAccount()) {
+        <div class="account-content">
+          <div class="account-avatar">
+            <mat-icon class="avatar-placeholder">account_circle</mat-icon>
+          </div>
+          <div class="account-details">
+            <h3>{{ currentAccount()?.pubkey | npub }}</h3>
+            <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed | date:'medium' }}</p>
+          </div>
+        </div>
+      } @else {
+        <div class="account-content">
+          <p>No active account</p>
+        </div>
+      }
+    </mat-card>
+  </div>
+
+  <mat-divider></mat-divider>
+
+  @if (nostrService.accounts().length > 1) {
+    <div class="other-accounts">
+      <h2>Other Accounts</h2>
+      
+      <mat-list class="accounts-list">
+        @for (account of nostrService.accounts(); track account.pubkey) {
+          @if (account.pubkey !== currentAccount()?.pubkey) {
+            <mat-list-item class="account-item" (click)="switchAccount(account.pubkey)">
+              @if(nostrService.getMetadataForAccount(account.pubkey)?.content; as metadata) {
+                <div class="account-avatar" matListItemIcon>
+                  @if (metadata.picture) {
+                    <img [src]="metadata.picture" alt="Profile picture" class="avatar-image">
+                  } @else {
+                    <mat-icon>account_circle</mat-icon>
+                  }
+                </div>
+                <div matListItemTitle>{{ metadata.display_name || metadata.name || (account.pubkey | npub) }}</div>
+                <div matListItemLine class="account-source">
+                  Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
+                </div>
+              } @else {
+                <mat-icon matListItemIcon>account_circle</mat-icon>
+                <div matListItemTitle>{{ account.pubkey | npub }}</div>
+                <div matListItemLine class="account-source">
+                  Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
+                </div>
+              }
+              
+              <button mat-icon-button class="delete-button" (click)="removeAccount($event, account.pubkey)"
+                matTooltip="Remove account">
+                <mat-icon color="warn">delete</mat-icon>
+              </button>
+            </mat-list-item>
+          }
+        }
+      </mat-list>
+    </div>
+  } @else {
+    <p class="no-other-accounts">No other accounts available</p>
+  }
+
+  <mat-divider></mat-divider>
+
+  <div class="actions">
+    <button mat-raised-button color="primary" [routerLink]="['/']">
+      <mat-icon>arrow_back</mat-icon>
+      Back to Home
+    </button>
+  </div>
+</div>
