--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -13,8 +13,7 @@
               <mat-icon class="avatar-placeholder">account_circle</mat-icon>
             }
           </div>
-          <div class="account-details">
-            <h3>{{ metadata.display_name || metadata.name || (currentAccount()?.pubkey | npub) }}</h3>
+          <div class="account-details">            <h3>{{ metadata.display_name || metadata.name || 'Unnamed Account' }}</h3>
             <p class="pubkey">{{ currentAccount()?.pubkey | npub }}</p>
             <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed | date:'medium' }}</p>
           </div>
@@ -25,7 +24,7 @@
             <mat-icon class="avatar-placeholder">account_circle</mat-icon>
           </div>
           <div class="account-details">
-            <h3>{{ currentAccount()?.pubkey | npub }}</h3>
+            <h3>Unnamed Account</h3>
             <p class="account-source">Type: {{ currentAccount()?.source }} • Last used: {{ currentAccount()?.lastUsed | date:'medium' }}</p>
           </div>
         </div>
@@ -36,7 +35,6 @@
       }
     </mat-card>
   </div>
-  <mat-divider></mat-divider>
 
   @if (nostrService.accounts().length > 0) {    <div class="all-accounts">
       <h2>Account List</h2>
@@ -51,16 +49,16 @@
                   } @else {
                     <mat-icon>account_circle</mat-icon>
                   }
-                </div>
-                <div matListItemTitle>{{ metadata.display_name || metadata.name || (account.pubkey | npub) }}</div>
+                </div>                <div matListItemTitle>{{ metadata.display_name || metadata.name || 'Unnamed Account' }}</div>
+                <div matListItemLine class="account-npub">{{ account.pubkey | npub }}</div>
                 <div matListItemLine class="account-source">
                   Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
                 </div>
               </ng-container>
             } @else {
-              <ng-container>
-                <mat-icon matListItemIcon>account_circle</mat-icon>
-                <div matListItemTitle>{{ account.pubkey | npub }}</div>
+              <ng-container>                <mat-icon matListItemIcon>account_circle</mat-icon>
+                <div matListItemTitle>Unnamed Account</div>
+                <div matListItemLine class="account-npub">{{ account.pubkey | npub }}</div>
                 <div matListItemLine class="account-source">
                   Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
                 </div>
@@ -78,12 +76,4 @@
     <p class="no-accounts">No accounts available</p>
   }
 
-  <mat-divider></mat-divider>
-
-  <div class="actions">
-    <button mat-raised-button color="primary" [routerLink]="['/']">
-      <mat-icon>arrow_back</mat-icon>
-      Back to Home
-    </button>
-  </div>
 </div>
