--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -39,31 +39,29 @@
   @if (nostrService.accounts().length > 0) {    <div class="all-accounts">
       <h2>Account List</h2>
       
-      <mat-list class="accounts-list">
-        @for (account of nostrService.accounts(); track account.pubkey) {          <mat-list-item class="account-item" [class.current-account-item]="account.pubkey === currentAccount()?.pubkey" (click)="switchAccount(account.pubkey)">
-            @if(nostrService.getMetadataForAccount(account.pubkey)?.content; as metadata) {
-              <ng-container>
-                <div class="account-avatar" matListItemIcon>
-                  @if (metadata.picture) {
-                    <img [src]="metadata.picture" alt="Profile picture" class="avatar-image">
-                  } @else {
-                    <mat-icon>account_circle</mat-icon>
-                  }
-                </div>                <div matListItemTitle>{{ metadata.display_name || metadata.name || 'Unnamed Account' }}</div>
-                <div matListItemLine class="account-npub">{{ account.pubkey | npub }}</div>
-                <div matListItemLine class="account-source">
+      <mat-list class="accounts-list">        @for (account of nostrService.accounts(); track account.pubkey) {          <mat-list-item class="account-item" [class.current-account-item]="account.pubkey === currentAccount()?.pubkey" (click)="account.pubkey !== currentAccount()?.pubkey ? switchAccount(account.pubkey) : null">            <div class="account-avatar list-avatar">
+              @if (nostrService.getMetadataForAccount(account.pubkey)?.content?.picture; as picture) {
+                <img [src]="picture" alt="Profile picture" class="avatar-image">
+              } @else {
+                <mat-icon>account_circle</mat-icon>
+              }
+            </div>
+              <div class="account-list-content">
+              <div class="account-name">
+                @if (nostrService.getMetadataForAccount(account.pubkey)?.content; as metadata) {
+                  {{ metadata.display_name || metadata.name || 'Unnamed Account' }}
+                } @else {
+                  Unnamed Account
+                }
+              </div>
+              
+              <div class="account-details-container">
+                <div class="account-npub">{{ account.pubkey | npub }}</div>
+                <div class="account-source">
                   Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
                 </div>
-              </ng-container>
-            } @else {
-              <ng-container>                <mat-icon matListItemIcon>account_circle</mat-icon>
-                <div matListItemTitle>Unnamed Account</div>
-                <div matListItemLine class="account-npub">{{ account.pubkey | npub }}</div>
-                <div matListItemLine class="account-source">
-                  Type: {{ account.source }} • Last used: {{ account.lastUsed | date:'medium' }}
-                </div>
-              </ng-container>
-            }
+              </div>
+            </div>
             
             <button mat-icon-button class="delete-button" (click)="removeAccount($event, account.pubkey)"
               matTooltip="Remove account">
