--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -277,14 +277,12 @@
   <!-- Mobile navigation footer - now outside of sidenav container -->
   @if (layout.isHandset()) {
   <div class="mobile-nav">
-    @for (item of navItems; track $index) {
-    @if (item.showInMobile) {
+    @for (item of navItemsMobile; track $index) {
     <a mat-button class="mobile-nav-button" [routerLink]="item.action ? undefined : [item.path]"
       routerLinkActive="active-link" (click)="item.action ? item.action() : null">
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
-    }
     }
   </div>
   }
