--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -279,7 +279,7 @@
     <!-- First two navigation items -->
     @for (item of navItemsMobile.slice(0, 2); track $index) {
     <a mat-button class="mobile-nav-button" [routerLink]="item.action ? undefined : [item.path]"
-      routerLinkActive="active-link" (click)="item.action ? item.action() : null">
+      routerLinkActive="active-link2" (click)="item.action ? item.action() : null">
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
@@ -295,7 +295,7 @@
     <!-- Last two navigation items -->
     @for (item of navItemsMobile.slice(2); track $index) {
     <a mat-button class="mobile-nav-button" [routerLink]="item.action ? undefined : [item.path]"
-      routerLinkActive="active-link" (click)="item.action ? item.action() : null">
+      routerLinkActive="active-link2" (click)="item.action ? item.action() : null">
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
