--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -286,13 +286,25 @@
   @if (layout.isHandset()) {
   <div class="mobile-nav">
     <!-- First two navigation items -->
-    @for (item of navItemsMobile.slice(0, 2); track $index) {
+    <!-- @for (item of navItemsMobile.slice(0, 2); track $index) {
     <a mat-button class="mobile-nav-button" [routerLink]="item.action ? undefined : [item.path]"
       routerLinkActive="active-link2" (click)="item.action ? item.action() : null">
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
-    }
+    } -->
+
+    <a mat-button class="mobile-nav-button" [routerLink]="['/']" routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}">
+      <mat-icon>home</mat-icon>
+      <div class="mobile-nav-label">Home</div>
+    </a>
+
+    <a mat-button class="mobile-nav-button" [routerLink]="['/articles']" routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}">
+      <mat-icon>article</mat-icon>
+      <div class="mobile-nav-label">Articles</div>
+    </a>
 
     <!-- FAB button in the middle with circular cut-out -->
     <div class="fab-container">
@@ -303,13 +315,26 @@
     </div>
 
     <!-- Last two navigation items -->
-    @for (item of navItemsMobile.slice(2); track $index) {
+    <!-- @for (item of navItemsMobile.slice(2); track $index) {
     <a mat-button class="mobile-nav-button" [routerLink]="item.action ? undefined : [item.path]"
       routerLinkActive="active-link2" (click)="item.action ? item.action() : null">
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
-    }
+    } -->
+
+    <a mat-button class="mobile-nav-button" [routerLink]="['/messages']" routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: true}">
+      <mat-icon>mail</mat-icon>
+      <div class="mobile-nav-label">Messages</div>
+    </a>
+
+    <a mat-button class="mobile-nav-button" [routerLink]="['/p', nostrService.pubkey()]" routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{exact: false}">
+      <mat-icon>account_circle</mat-icon>
+      <div class="mobile-nav-label">Profile</div>
+    </a>
+
   </div>
   }
 
